fix: page info on mobile

--- a/css/page-info.css
+++ b/css/page-info.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap");
 
+.page-info {
+  max-height: 90%;
+  overflow: scroll;
+}
+
 .page-info-button {
   display: flex;
   align-items: center;
@@ -22,6 +27,12 @@
 }
 
 @media (max-width: 500px) {
+  .page-info-button img {
+    filter: none;
+  }
+}
+
+@media (max-width: 500px) {
   .page-info-button {
     width: 35px;
     height: 35px;
@@ -39,10 +50,6 @@
     border-bottom: dotted 2px transparent !important;
     border-radius: unset !important;
   }
-
-  .page-info-button img {
-    filter: unset;
-  }
 }
 
 .page-info-button:hover {
@@ -55,6 +62,13 @@
 .page-info-icon img {
   max-width: 60px;
   max-height: 60px;
+}
+
+@media (max-width: 500px) {
+  .page-info-icon img {
+    max-width: 40px;
+    max-height: 40px;
+  }
 }
 
 .page-info-overlay {
@@ -76,13 +90,19 @@
 
 .page-info-title {
   display: flex;
-  margin-bottom: 0;
+  margin: 0;
   align-items: center;
   justify-content: center;
   text-align: center;
   font-size: 2.4rem;
   font-weight: 100;
   font-family: var(--font-family-title);
+}
+
+@media (max-width: 1000px) {
+  .page-info-title {
+    font-size: 1.5rem;
+  }
 }
 
 .page-info-body {
@@ -99,8 +119,8 @@
     transform-origin: left;
   }
 
-  & h1,
   & h2,
+  & h1,
   & h3,
   & h4,
   & h5,
@@ -114,7 +134,7 @@
 @media (max-width: 1000px) {
   .page-info-body {
     padding: 0 20vw;
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 }
 
